--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="tv_user_name_text">大魔王:</string>
     <string name="tv_distance_text">距离我100m</string>
     <string name="btn_send_text">长按发送语音消息</string>
+    <string name="menu_clear_title">清空数据</string>
 </resources>
