--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,10 @@
     <string name="tv_distance_text">距离我100m</string>
     <string name="btn_send_text">长按发送语音消息</string>
     <string name="menu_clear_title">清空数据</string>
+
+    <string name="action_settings">Settings</string>
+    <string name="str_recorder_normal">按住说话</string>
+    <string name="str_recorder_recording">松开结束</string>
+    <string name="str_recorder_want_cancel">松开手指，取消发送</string>
+
 </resources>
